--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=Transchool2025
 spring.datasource.url=jdbc:postgresql://localhost:5432/transchool_db
 spring.datasource.username=postgres
 spring.datasource.password=a1b2c3d4e5
-
+spring.jpa.database=postgresql
 #Driver para conexion a la base de datos
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Configura el dialecto de Hibernate, que es el ORM (Object-Relational Mapping) utilizado por Spring Data JPA.
-#El dialecto especifica cómo Hibernate 
+#El dialecto especifica cï¿½mo Hibernate 
 #debe generar las consultas SQL para adaptarse a 
 #las peculiaridades de PostgreSQL.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -18,4 +18,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 # Configuracion del path base para los endpoints
 server.servlet.context-path=/api/v1
+#debug=true
 
