--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+
 				<configuration>
+					<fork>true</fork>
 					<excludes>
 						<exclude>
 							<!--<groupId>org.projectlombok</groupId>
