se  implementó la ruta para que el transportista sepa su furgon asignado  y se restringio que solo el admin crea,elimine y vea todos los furgones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #las peculiaridades de PostgreSQL.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # A partir de las entidades se define en el proyecto se cree las tablas y se actualizen
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
