--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Configuracion del path base para los endpoints
 server.servlet.context-path=/api/v1
+spring.main.allow-bean-definition-overriding=true
 #debug=true
 # application.properties
 logging.level.org.springframework.security.web=DEBUG
@@ -32,3 +33,6 @@ jwt.validity-in-seconds=2592000
 edteam.openapi.dev-url=http://localhost:8080/api/v1
 edteam.openapi.prod-url=https://transchool2025-api-kv05.onrender.com/api/v1
 spring.jackson.time-zone=America/Santiago
+springdoc.show-login-endpoint=true
+# Esta es la clave para Pageable:
+springdoc.model-and-view-allowed=true
