se configuro que  spring cree las tablas y despues se agregue un usuario admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,5 @@ spring.jackson.time-zone=America/Santiago
 springdoc.show-login-endpoint=true
 # Esta es la clave para Pageable:
 springdoc.model-and-view-allowed=true
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
